--- a/package.json
+++ b/package.json
@@ -3,10 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsup --watch"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.11.12",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.4"
+  },
+  "bin": {
+    "island": "./bin/index.js"
+  },
+  "dependencies": {
+    "cac": "^6.7.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^4.0.0"
+  }
 }
