--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-     "rootDir": "src",
+    "module": "ESNext", 
     "outDir":"dist",
     "target": "ESNext",                                
-    "module": "ESNext",                               
+    "jsx":"react-jsx",
     "moduleResolution":"Node",
-    "allowJs": false,
-    "jsx":"react-jsx"
+    "esModuleInterop": true
   }
-}
+ }
