--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@vitejs/plugin-react": "^3.0.0",
     "cac": "^6.7.14",
     "fs-extra": "^11.1.0",
+    "polka": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.7.0",
-    "vite": "^4.0.0",
-    "polka": "^0.5.2",
-    "sirv": "^2.0.2"
+    "sirv": "^2.0.2",
+    "unconfig": "^0.3.7",
+    "vite": "^4.0.0"
   }
 }
