--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ESNext",                                
     "jsx":"react-jsx",
     "moduleResolution":"Node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": "src"
+  },
   }
- }
