--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "ESNext", 
     "outDir":"dist",
+    "rootDir": ".",
     "target": "ESNext",                                
     "jsx":"react-jsx",
     "moduleResolution":"Node",
